change menu to sidebar
