# backend/docs/swagger.json
@@ -431,7 +431,6 @@
             "required": [
                 "id",
                 "is_admin",
-                "is_super_admin",
                 "last_login",
                 "permission",
                 "uid",
@@ -445,9 +444,6 @@
                     "type": "integer"
                 },
                 "is_admin": {
-                    "type": "boolean"
-                },
-                "is_super_admin": {
                     "type": "boolean"
                 },
                 "last_login": {
@@ -740,9 +736,6 @@
                 "username"
             ],
             "properties": {
-                "is_admin": {
-                    "type": "boolean"
-                },
                 "password": {
                     "type": "string"
                 },
